--- a/TODO
+++ b/TODO
@@ -42,3 +42,4 @@ These are some ideas for future improvements
     - civil 
     - astronomical
 - Have chart and legend on page 1, print notable info page 2
+- Proper motion calculations
